# Narae_remote-client

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: commandValidator.ts  firebase.ts  iceConfig.ts
